<resources>
    <string name="app_name">MEB Database 1.0</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="ask">Enter Dart Monkey crosspath to test</string>
    <string name="enter">Enter</string>

    <string-array name="tiers">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="top">Top Path</string>
    <string name="middle">Middle Path</string>
    <string name="bottom">Bottom Path</string>

    <string name="thing">Hello there</string>

    <string name="Cost">Cost</string>
</resources>